k8s/dev/admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-vue-deployment
  labels:
    app: admin-vue
spec:
  selector:
    matchLabels:
      app: admin-vue
  replicas: 1
  template:
    metadata:
      labels:
        app: admin-vue
    spec:
      containers:
      - name: admin-vue
        image: lokaventour/admin-vue:master-33fb6b3b
        imagePullPolicy: Always
        ports:
        - name: admin-service
          containerPort: 8080
      nodeSelector:
        "doks.digitalocean.com/node-pool": "admin"
      imagePullSecrets:
      - name: lokavenimagesecret
