k8s/dev/admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin-vue
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort
